<resources>
    <string name="app_name">UserInformation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hyperlink"><a href="https://twitter.com/tech_queen">Follow me on Twitter</a></string>
    <string name="registrationlink"><a href="Registration">Registration</a></string>
    <string name="amazon">Amazon</string>
    <string name="clothing">Clothing</string>
    <string name="electronics">Electronics</string>
    <string name="home">Home</string>
    <string name="beauty">Beauty</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="groceries">Groceries</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="new_user">New User,</string>
    <string name="user_login">User Login</string>
    <string name="sign_in">Sign in</string>
    <string name="clothingg">Clothing</string>
    <string name="electronic">Electronics</string>
    <string name="clothing_section">Clothing Section</string>
    <string name="name_of_cloth">Name Of Cloth</string>
    <string name="price">\u20A8.8</string>
    <string name="electronics_section">Electronics Section</string>
    <string name="name">Name</string>
    <string name="timer_picker">Timer Picker</string>
    <string name="time_picker_dialog">Time Picker Dialog</string>
    <string name="pick_me">Pick Me</string>
    <string name="time">Time</string>
    <string name="img_url">Images</string>
    <string name="select_image">Selected Image </string>
    <string-array name="Images">
        <item>Img1</item>
        <item>Img2</item>
        <item>Img3</item>
        <item>Img4</item>
    </string-array>
    <string name="emp_status">Status</string>
    <string name="signn">Sign In</string>
    <string name="create_new_acoount_here">create new acoount here</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="sign_up">Sign Up</string>
    <string name="Username">username</string>
    <string name="email">* Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="aadhaar_number_hint">Aadhaar Number</string>
    <string name="email_hint">Email</string>
    <string name="date_of_birth_hint">Date Of Birth</string>
    <string name="address_hint">Address</string>
    <string name="re_enter_aadhaar_number_hint">Re-Enter Aadhaar Number</string>
    <string name="state_hint">State</string>
    <string name="postal_hint">Postal</string>
    <string name="country_hint">Country</string>
    <string name="gender">* Gender</string>
    <string name="male">Male</string>
    <string name="Female">\n</string>
    <string name="female">Female</string>
    <string name="cloth">Cloth</string>
    <string name="fargment_to_activity">Fargment To Activity</string>
    <string name="fragment_to_activity">fragment_to_activity</string>
    <string name="fragment_to_activityy">Fragment To Activity</string>
    <string name="activity_lifecycle">Activity LifeCycle</string>
    <string name="custom_adaptor_for_recycler_view">Custom Adaptor For Recycler View</string>
    <string name="shoes">Shoes</string>
    <string name="employee_post">Employee(POST)</string>
    <string name="user_post_json_obj">User (POST JSON Obj)</string>
    <string name="inputfield">InputField</string>
    <string name="product">Product</string>
    <string name="custom_adaptor_for_list_view">Custom Adaptor For List View</string>
    <string name="fragment_to_fragment_single_activity">Fragment To Fragment (Single Activity)</string>
    <string name="layout">Layout</string>
    <string name="groceries_section">Groceries Section</string>
    <string name="enter_user_name">Enter User name</string>
    <string name="enter_user_job">Enter user job</string>
    <string name="send_data">Send Data</string>
    <string name="response">Response :</string>
    <string name="user_details">User Details</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_customer_contact">Enter Customer Contact</string>
    <string name="submit">SUBMIT</string>
    <string name="open_webpage">WebPage</string>
    <string name="intent_operations">Intent Operations</string>
    <string name="open_call">dile call</string>
    <string name="open_camera">camera</string>
    <string name="intent">Intent</string>
    <string name="service">Service</string>
    <string name="excellent">Excellent</string>
    <string name="verygood">VeryGood</string>
    <string name="best">Best</string>
    <string name="good">Good</string>
    <string name="pleace_give_a_ratting_to_this_app">Pleace Give A Ratting To This App</string>
    <string name="please_give_a_ratting_to_this_ap">\n</string>
    <string name="please_give_a_ratting_to_this_app">please_give_a_ratting_to_this_app</string>
    <string name="please_give_the_ratting">Please Give The Ratting</string>
    <string name="submit_dialog">Submit Dialog</string>
    <string name="cancel">Cancel</string>
    <string name="text_view">Text View</string>
    <string name="custom_dialog_box">Custom Dialog Box</string>
    <string name="fragment_second">Fragment Second</string>
    <string name="f_to_f">F to F</string>
    <string name="a">Activity LifeCycle</string>
    <string name="adaptor_rv">Adaptor RV</string>
    <string name="post_api">Post Api</string>
    <string name="data_transfer_jo">Data Transfer(JO)</string>
    <string name="intent_operation">Intent Operations</string>
    <string name="a_to_f">A to F</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="dtjo">DTJO</string>
    <string name="a_lifecycle">A Lifecycle</string>
    <string name="in_operations">In.Operations</string>
    <string name="fragment_one">Fragment One</string>
    <string name="enter_first_fragment_message">Enter First Fragment Message</string>
    <string name="send_f2">SEND F2</string>
    <string name="enter_message">Enter Message</string>
    <string name="employee_details">Employee Details</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_salary">Enter Salary</string>
    <string name="enter_age">Enter Age</string>
    <string name="respons">Response :</string>
    <string name="user_detail">User Details</string>
    <string name="enter_your_job">Enter Your Job</string>
    <string name="android">Android</string>
    <string name="development">Development</string>
    <string name="transfer_data">Transfer Data</string>
    <string name="ok">OK</string>
    <string name="okay">okay</string>
    <string name="enter_user">Enter user name</string>
    <string name="id">Id :</string>
    <string name="message">Message</string>
    <string name="delete_item">delete item</string>
    <string name="delete">Delete</string>
    <string name="user_id">User Id:</string>
    <string name="i">Id:</string>
    <string name="title">Title:</string>
    <string name="completed">Completed:</string>
    <string name="user_">User Id:</string>
    <string name="contact">Contact</string>
    <string name="invalid_form">Invalid Form</string>
    <string name="please_enter_correct_details">Please Enter Correct Details</string>
    <string name="confirm_your_details">Confirm Your Details</string>
    <string name="please_confirm_your_detail_before_submit_form">PLease Confirm Your Detail Before Submit Form.</string>
    <string name="please_confirm_your_details_before_submit_the_form">Please Confirm Your Details Before Submit The Form</string>
    <string name="edit">Edit</string>
    <string-array name="Status">
        <item>Success</item>
        <item>Failure</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="book_library">Book Library</string>
    <string name="add_product_details">Add Product Details</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_product_category">Enter Product Category</string>
    <string name="save">SAVE</string>
    <string name="details_of_product">Details Of Product</string>
    <string name="product_id">Product Id:</string>
    <string name="product_name">Product Name</string>
    <string name="product_category">Product Category:</string>
    <string name="update_product_details">Update Product Details</string>
    <string name="update">UPDATE</string>
    <string name="setting">setting</string>
    <string name="imgbtn1">imgbtn1</string>
    <string name="login_img">login img</string>
    <string name="logo">logo</string>
    <string name="adaptor_lv">Adaptor LV</string>
    <string name="profile">profile</string>
    <string name="sign_upp">sign up</string>
    <string name="oops_please_check_your_inputs">Oops! Please Check Your Inputs</string>
    <string name="please_ensure_all_required_fields_are_filled_out_correctly">Please ensure all required fields are filled out correctly.</string>
    <string name="collection_of_quote">Collection Of Quote</string>
    <string name="quote">Quote</string>
    <string name="author">Author</string>
    <string name="idd">Id</string>
    <string name="action">Action</string>
    <string name="are_you_sure_you_want_to_romove_this_details">Are You Sure, You Want To Romove This Details?</string>
    <string name="are_you_sure_you_want_to_remove_this_details">Are you sure, You want to remove this details ?</string>
    <string name="user_information">User Information</string>
    <string name="first_name">* First Name</string>
    <string name="last_name">* Last Name</string>
    <string name="add">ADD</string>
    <string name="back_button">Back Button</string>
    <string name="your_information">Your Information</string>
    <string name="your_informations">Your Information</string>
    <string name="infoDescription">Lorem ipsum dolor sit amet, consectetuer\nadipiscing elit.</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="_5_march_1995">5 March 1995</string>
    <string name="date_of_birth">* Date Of Birth</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="select_state">Select State</string>
    <string name="state">* State</string>
    <string name="postal">* Postal Code</string>
    <string name="country">* Country</string>
    <string name="_2021">2021</string>
    <string name="no_where_st">no where st</string>
    <string name="enter_number">enter number</string>
    <string name="call">Call</string>
    <string name="xl">XL</string>
    <string name="cart">Cart</string>
    <string name="brown_jacket">Brown Jacket</string>
    <string name="_83_90">83.97</string>
    <string name="size">Size :\t</string>
    <string name="payment_option">Payment Option :</string>
    <string name="credit_card">Credit card\t\t</string>
    <string name="continues">Continue</string>
    <string name="debit_cart">Debit Cart</string>
    <string name="qty">Qty :</string>
</resources>