<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="34dp"
    tools:context=".intent.IntentActivity">

    <TextView
        android:id="@+id/txt_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/intent_operations"
        android:textColor="@color/crimson"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_open_webpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_intent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:padding="20dp"
        android:text="@string/open_webpage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_open_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_open_webpage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:padding="20dp"
        android:text="@string/open_call" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_open_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_open_call"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:padding="20dp"
        android:text="@string/open_camera" />

    <EditText
        android:id="@+id/edt_intent_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_open_camera"
        android:layout_centerHorizontal="true"
        android:textColor="@color/crimson"
        android:textSize="14sp"
        android:autofillHints="text"
        android:hint="@string/enter_message"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_intent_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/send_data" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/call"
        android:layout_below="@+id/btn_send_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:maxLength="10"
        android:autofillHints="creditCardNumber" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_call"
        android:text="@string/call"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_below="@+id/call"
        android:layout_centerHorizontal="true" />

</RelativeLayout>