<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentToActivity.FragmentToActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfer_data"
        android:textSize="22sp"

        android:textColor="@color/crimson"
        android:layout_gravity="center"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_customer_name"
        android:hint="@string/enter_customer_name"
        android:layout_marginTop="50dp"
        android:textColor="#E91E63"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_customer_contact"
        android:hint="@string/enter_customer_contact"
        android:layout_marginTop="20dp"
        android:textColor="#E91E63"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_customer_data_Send"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        app:backgroundTint="#E91E63"
        android:layout_gravity="center" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_layout" />


</LinearLayout>