<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".electronics.Electronics">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/electronics_section"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#E91E63"
        android:layout_marginTop="70dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="#2036B3"
        android:textSize="22sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="140dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="#2036B3"
        android:textStyle="bold"
        android:layout_marginTop="140dp"
        android:textSize="22sp"
        android:layout_marginStart="240dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:id="@+id/electronicslist" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>