<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@color/white"
    android:clickable="true"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:id="@+id/ll_add_to_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="2"
            android:background="@drawable/add_to_cart_background"
            android:contentDescription="@string/cloth"
            android:elevation="4dp"
            android:src="@drawable/furniture" />

        <LinearLayout
            android:id="@+id/txt_product_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/brown_jacket"
                android:textSize="13sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/rl_product_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/txt_product_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/size"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_product_selected_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/txt_product_size"
                    android:includeFontPadding="false"
                    android:text="@string/xl"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/txt_product_qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/txt_product_selected_size"
                    android:includeFontPadding="false"
                    android:text="@string/qty"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_product_qty_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/txt_product_qty"
                    android:includeFontPadding="false"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txt_product_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/_83_90"
                android:textSize="13sp"
                android:textStyle="bold" />


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_increment_decrement_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:gravity="center"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/button_small"
                android:text="@string/cancel"
                android:textColor="@color/crimson"
                android:textSize="13sp" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>